@@ -186,6 +186,7 @@ Version 1.6.current:
     * Added a (less broken) MoinMoin.support.difflib, details see there.
     * BadContent and LocalBadContent now get noindex,nofollow robots header,
       same as POSTs.
+    * Fixed handling of anchors in wiki links for the Restructured text parser.
 
   Other changes:
     * we use (again) the same browser compatibility check as FCKeditor uses
